basic stuff works

--- a/daszek_project/wybory/static/obwody.css
+++ b/daszek_project/wybory/static/obwody.css
@@ -10,6 +10,7 @@ button {
 	outline: 0;
 	padding: 12px 20px;
 	transition: all .1s linear;
+	display: table;
 }
 button:active {
 	box-shadow: 0 2px 0 #006599;
