--- a/pokemon/pokedex/templates/pokemon.html
+++ b/pokemon/pokedex/templates/pokemon.html
@@ -2,12 +2,11 @@
 <h1>{{ pokemon.nazwa }}</h1>
 
 <div>Numer: {{ pokemon.numer }}</div>
-
 {% if ewolucja %}
-    <p><a href="{% url 'pokemon' ewolucja.numer %}">{{ pokemon.ewolucja }} {{ ewolucja }}</a></p>
+<div>Ewolucja: <a href="{% url 'pokemon' ewolucja.numer %}">{{ pokemon.ewolucja }}</a></div>
 {% else %}
-	<p>Brak</p>
+<div>Brak ewolucji</div>
 {% endif %}
 
-<div>Atak1: {{ pokemon.rodzaj1 }}</div>
-<div>Atak2: {{ pokemon.rodzaj2 }} TODO CHECK</div> 
+<div>Atak 1: {{ pokemon.rodzaj1 }}</div>
+{% if pokemon.rodzaj2 %}<div>Atak2: {{ pokemon.rodzaj2 }}</div>{% endif %}
